# cloud-sdk-python

./: .env_integration_tests.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  question.yml
.github/workflows/: README.md  build.yaml  checks.yaml  codeql.yaml  integration-tests.yml  proto-verify.yaml  release-internal.yml  release.yml  reuse.yaml  sync.yaml  test.yaml
docs/: GUIDELINES.md  INTEGRATION_TESTS.md  RELEASE.md
mocks/: destination.json
src/buf/validate/: validate_pb2.py
src/cloud_sdk_python/core/secret_resolver/: resolver.py
src/sap_cloud_sdk/: __init__.py
src/sap_cloud_sdk/agent_decorators/: __init__.py  decorators.py  exceptions.py  user-guide.md
src/sap_cloud_sdk/agent_memory/: __init__.py  _endpoints.py  _http_transport.py  _models.py  client.py  config.py  exceptions.py  py.typed  user-guide.md
src/sap_cloud_sdk/agent_memory/utils/: _odata.py
src/sap_cloud_sdk/agentgateway/: __init__.py  _customer.py  _lob.py  _models.py  agw_client.py  converters.py  exceptions.py  py.typed  user-guide.md
src/sap_cloud_sdk/aicore/: __init__.py  user-guide.md
src/sap_cloud_sdk/core/: _version.py
src/sap_cloud_sdk/core/auditlog/: __init__.py  _http_transport.py  _transport.py  client.py  config.py  exceptions.py  models.py  user-guide.md
src/sap_cloud_sdk/core/auditlog_ng/: __init__.py  client.py  config.py  example_send_event.py  exceptions.py  requirements-client.txt  setup-python-environment.sh  user-guide.md
src/sap_cloud_sdk/core/secret_resolver/: __init__.py  constants.py  resolver.py  user-guide.md
src/sap_cloud_sdk/destination/: __init__.py  _http.py  _models.py  certificate_client.py  client.py  config.py  exceptions.py  fragment_client.py  user-guide.md
src/sap_cloud_sdk/dms/: user-guide.md
src/sap_cloud_sdk/extensibility/: __init__.py  _a2a.py  _local_transport.py  _models.py  _noop_transport.py  _ord_integration.py  _ums_transport.py  client.py  config.py  exceptions.py  local_extensibility_example.json  user-guide.md
src/sap_cloud_sdk/ias/: __init__.py  _claims.py  _token.py  exceptions.py  user-guide.md
src/sap_cloud_sdk/objectstore/: __init__.py  _models.py  _s3.py  exceptions.py  user-guide.md  utils.py
tests/: __init__.py
tests/agent_decorators/unit/: test_decorators.py  test_exceptions.py
tests/agent_memory/integration/: agentmemory.feature  conftest.py  test_agentmemory_bdd.py
tests/agent_memory/unit/: test_client.py  test_config.py  test_exceptions.py  test_http_transport.py  test_models.py  test_odata.py
tests/agentgateway/: __init__.py
tests/agentgateway/unit/: __init__.py  test_agw_client.py  test_converters.py  test_customer.py  test_lob.py  test_models.py
tests/aicore/: __init__.py
tests/aicore/unit/: __init__.py  test_aicore.py
tests/core/unit/: test_version.py
tests/destination/integration/: __init__.py  certificate.feature  conftest.py  destination.feature  fragment.feature  test_destination_bdd.py
tests/destination/unit/: test_certificate_client.py  test_client.py  test_config.py  test_fragment_client.py  test_models.py
tests/extensibility/: __init__.py
tests/extensibility/unit/: __init__.py  _ums_test_helpers.py  test_a2a.py  test_client.py  test_config.py  test_exceptions.py  test_local_transport.py  test_models.py  test_noop_transport.py  test_ord_integration.py  test_ums_caching.py  test_ums_pagination.py  test_ums_parsing.py  test_ums_transport.py
tests/ias/unit/: test_token.py
tests/objectstore/integration/: __init__.py  conftest.py  objectstore.feature  test_objectstore_bdd.py
tests/objectstore/unit/: test_create_client.py  test_exceptions.py  test_models.py  test_s3_client.py
(+44 files in other folders)
